...
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <Button
                android:id="@+id/n7"
                style="@style/ButtonKB"
                android:text="@string/nn7" />

            <Button
                android:id="@+id/n4"
                style="@style/ButtonKB"
...
            <Button
                android:id="@+id/n3"
                style="@style/ButtonKB"
                android:text="@string/nn3" />

            <Button
                android:id="@+id/n11"
                style="@style/ButtonKB"
                android:text="@string/nn11"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
...
                android:id="@+id/bs_yb"
                style="@style/ButtonKB"
                android:text="@string/hymn_yb"
                android:textSize="25sp" />

            <Button
                android:id="@+id/bs_bb"
                style="@style/ButtonKB"
                android:text="@string/hymn_bb"
                android:textSize="25sp" />

            <Button
                android:id="@+id/bs_db"
...
