...
        android:id="@+id/playlist_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/playlist_name_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text|textCapSentences"
            android:singleLine="true"
...
