...
            android:text="@string/cancel" />

        <Button
            android:id="@+id/saveButton"
            style="@style/ButtonTop"
            android:layout_marginStart="4dp"
            android:text="@string/ok" />
    </LinearLayout>
</LinearLayout>

